# SATELLITE_CALIBRATION

./: .dockerignore  .gitignore  ACTIONS.md  AGENTS.md  BASELINE.md  BASE_MODEL_BEHAVIOUR.md  CLAUDE.md  Dockerfile.hud  PITCH.md  README.md  REWARD.md  TASKS.md  VALIDATION.md  WHY_AGENT.md  WHY_RL.md  demo_baseline_vs_agent.py  env.py  index.html  pyproject.toml  tasks.py  test_env.py  test_specific_episode.py
agent/: eval_test.py  gemma_agent.py  rft_server.py
data/: rft_seed.jsonl
data/runs/: 20260621T013516Z_drift_seed1.json  20260621T014557Z_drift_seed1.json
docs/: ENVIRONMENT.md  EXECUTION_PLAN.md  HUD_HACKATHON.md  REWARD.md
env/: anomalies.py  episode_generator.py  physics.py  satellite_env.py
scripts/: demo_baseline_vs_agent.py  export_playback.py  inspect_episode.py  manual_rollout.py  train_hud_qwen.py
sim/: __init__.py  anomalies.py  physics.py  satellite_env.py
tests/: test_env.py
web_agent_scene/: README.md  app.js  index.html  playback.json  style.css
web_agent_scene/models/: earth.js  ground-antenna.js  satellite.js
