[project]
name = "satellite-calibration"
version = "0.1.0"
description = "HUD v6 RL environment for autonomous satellite ground-station operation."
# v6 SDK caps at <3.13; pin the upper bound so uv does not pick 3.13 and fail.
requires-python = ">=3.11,<3.13"
dependencies = [
    "hud-python>=0.6.0",
    "numpy>=1.26",
    "gymnasium>=0.29",
    "skyfield>=1.49",
    "fireworks-ai>=0.19.20",
    "eval-protocol>=0.3.0",
    "uvicorn>=0.49.0",
    "fastapi>=0.138.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.8",
]

[tool.uv]
package = false
